# ai-smartness

./: .gitignore  Cargo.toml  LICENSE.md  README.md  README_ES.md  README_FR.md  saved_prompts.txt  tauri.conf.json
ai-smartness-vscode/: package-lock.json  package.json
ai-smartness-vscode.bak/: package-lock.json  package.json
ai-smartness-vscode.bak/src/: extension.ts  paths.ts  statusBar.ts  stdinInjection.ts  wakeSignals.ts
ai-smartness-vscode/src/: agentController.ts  cli.ts  extension.ts  paths.ts  statusBar.ts  stdinInjection.ts  wakeSignals.ts
audit/: 2026-03-01_pipeline_v5.4.1.md  2026-03-03_brainstorming-proposal.md  2026-03-04_vram-llm-resilience.md
docs/: settings-reference.md
plans/: arborescence-refactor.md  ava-brainstorm-proposal.md  brainstorming-proposal.md  cli-first-daemon-standalone.md  weight-rework-engram-filter.md
plans/archive/: cognitive-proactivity-audit.md  compact-wiring-audit.md  context-tokens-hack.md  contre-audit-stability-memory.md  edges-graph-audit.md  gossip-bridges-audit.md  gui-agent-form-custom-fields.md  gui-charte-graphique.md  gui-freeze-update-agent.md  m28-busy-timeout-mcp-reconnect.md  max-quota-tracking.md  meta-plan.md  model-per-agent-audit.md  stability-memory-audit.md  thinkbridge-audit.md  tui-headless-audit.md  v4.0.0-rules-engram-lean-reminder.md
prompts/Gemma-12B/: coherence.toml  extractor.toml  merge_evaluator.toml  relevance_gate.toml  toolextractor.toml
prompts/Phi-4-Mini/: coherence.toml  extractor.toml  merge_evaluator.toml  relevance_gate.toml  toolextractor.toml
prompts/Qwen-14B/: coherence.toml  extractor.toml  merge_evaluator.toml  relevance_gate.toml  toolextractor.toml
prompts/Qwen-32B/: coherence.toml  extractor.toml  merge_evaluator.toml  relevance_gate.toml  toolextractor.toml
prompts/Qwen-7B/: coherence.toml  extractor.toml  merge_evaluator.toml  relevance_gate.toml  toolextractor.toml
src/: agent.rs  bridge.rs  config.rs  config_sync.rs  constants.rs  error.rs  hook_setup.rs  id_gen.rs  lib.rs  main.rs  message.rs  project_registry.rs  provider.rs  session.rs  shared.rs  test_helpers.rs  thread.rs  time_utils.rs  tracing_init.rs  user_profile.rs
src/admin/: commands.rs  mod.rs  views.rs
src/cli/: agent.rs  bridges.rs  config.rs  controller.rs  daemon.rs  hardware.rs  init.rs  mod.rs  mode.rs  model.rs  project.rs  rule.rs  search.rs  setup_model.rs  setup_onnx.rs  status.rs  threads.rs
src/daemon/: capture_queue.rs  connection_pool.rs  controller.rs  ipc_server.rs  mod.rs  periodic_tasks.rs  pool_processor.rs  pool_writer.rs  processor.rs  watchdog.rs
src/guardcode/: enforcer.rs  injector.rs  mod.rs  rules.rs
src/gui/: commands.rs  mod.rs
src/healthguard/: checks.rs  formatter.rs  merge_detector.rs  mod.rs
src/hook/: capture.rs  compact.rs  guard_write.rs  health.rs  inject.rs  mod.rs  pretool.rs  reminder.rs  response.rs  setup.rs  virtual_paths.rs
src/intelligence/: archiver.rs  decayer.rs  engram_retriever.rs  gossip.rs  healthguard.rs  memory_retriever.rs  merge_evaluator.rs  merge_metadata.rs  metadata_utils.rs  mod.rs  reactivation_decider.rs  synthesis.rs  thread_manager.rs
src/mcp/: jsonrpc.rs  mod.rs  server.rs
src/network/: discovery.rs  mod.rs  peer.rs  protocol.rs
src/processing/: cleaner.rs  coherence.rs  daemon_ipc_client.rs  embeddings.rs  extractor.rs  hardware.rs  llm_subprocess.rs  local_llm.rs  mod.rs  model_download.rs  prompt_loader.rs  remote_llm.rs  toolextractor.rs  vram_probe.rs
(+49 files in other folders)
